<resources>
    <string name="app_name">FinalProject</string>
    <string name="action_settings">Settings</string>
    <string name="tip_percentage">15%</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="con_curr">New Currency</string>
    <string name="enter_amount">\\\"Enter Amount.\\\"</string>
    <string name="con_curr_pound">Pound Value</string>
</resources>
