<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#6a7283"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.deitel.finalproject.jruiz.finalproject.MainActivity"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/amountEditText"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits="0123456789"
        android:maxLength="6"
        android:editable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/amountTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_amount"
        android:layout_gravity="fill_horizontal"
        android:background="@color/amount_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"
        android:editable="false"
        android:linksClickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Tip %"
        android:id="@+id/percentTextView"
        android:hint="@string/tip_percentage"
        android:layout_gravity="center_vertical|right"
        android:layout_row="1"
        android:layout_column="0" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="@dimen/seekbar_height"
        android:id="@+id/percentSeekBar"
        android:indeterminate="false"
        android:max="30"
        android:layout_gravity="fill_horizontal"
        android:progress="15"
        android:layout_row="1"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/convCurTextView"
        android:layout_gravity="right"
        android:text="Con. Currency"
        android:hint="@string/tip_percentage"
        android:layout_row="2"
        android:layout_column="0" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="@dimen/seekbar_height"
        android:id="@+id/percentSeekBar1"
        android:max="100"
        android:layout_gravity="fill_horizontal"
        android:progress="50"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tipLabelTextView"
        android:hint="@string/tip"
        android:layout_gravity="right"
        android:layout_row="3"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tipTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"
        android:layout_row="3"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/totalLabelTextView"
        android:hint="@string/total"
        android:layout_gravity="right"
        android:layout_row="4"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/totalTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"
        android:longClickable="false"
        android:layout_row="4"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/conCurrTextView"
        android:layout_gravity="right"
        android:hint="@string/con_curr"
        android:layout_row="5"
        android:layout_column="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/conTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:layout_row="5"
        android:layout_column="1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pound"
        android:id="@+id/poundBox"
        android:layout_row="6"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pound"
        android:id="@+id/poundButton"
        android:layout_row="6"
        android:layout_column="1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yuan"
        android:id="@+id/yuanBox"
        android:layout_row="7"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Yuan"
        android:id="@+id/yuanButton"
        android:layout_row="7"
        android:layout_column="1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Col Peso"
        android:id="@+id/pesoBox"
        android:layout_row="8"
        android:layout_column="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Col Peso"
        android:id="@+id/pesoButton"
        android:layout_row="8"
        android:layout_column="1" />
</GridLayout>
